--- a/layouts/partials/home/custom.html
+++ b/layouts/partials/home/custom.html
@@ -26,21 +26,21 @@
           alt="{{ $.Site.Author.name | default " Author" }}" src="{{
           $authorImage.RelPermalink }}" /> {{ end }} {{ end }}
           <h1
-            class="mb-2 text-4xl font-extrabold text-neutral-800 dark:text-neutral-200"
+            class="mb-1 text-4xl font-extrabold text-neutral-800 dark:text-neutral-100"
           >
             {{ .Site.Author.name | default .Site.Title }}
           </h1>
           {{ with .Site.Author.headline }}
-          <h2 class="mt-0 mb-0 text-xl text-neutral-800 dark:text-neutral-300">
+          <h2 class="mt-0 mb-0 text-xl text-neutral-800 dark:text-neutral-300 font-normal">
             {{ . | markdownify | emojify }}
           </h2>
           {{ end }}
-          <div class="mt-1 mb-10 text-2xl">
+          <div class="mt-4 mb-10 text-2xl">
             {{ with .Site.Author.links }}
-            <div class="flex flex-wrap">
+            <div class="flex flex-wrap gap-2">
               {{ range $links := . }} {{ range $name, $url := $links }}
               <a
-                class="px-1 hover:text-primary-400 text-primary-800 dark:text-primary-200"
+                class="p-2 hover:text-primary-400 text-primary-800 dark:text-primary-200 rounded-md"
                 href="{{ $url }}"
                 target="_blank"
                 aria-label="{{ $name | title }}"
