adjusted grid view for mobile

--- a/layouts/partials/home/custom.html
+++ b/layouts/partials/home/custom.html
@@ -135,7 +135,7 @@
 </section>
 <section class="my-12">
   <h2 class="my-4 text-2xl font-extrabold">The things I value...</h2>
-  <div class="grid grid-cols-3 grid-rows-2 gap-4">
+  <div class="grid md:grid-cols-3 gap-4">
    
     <div class="rounded-md border border-primary-600 p-6">
       <p class="mb-4 text-xl font-semibold">simplicity</p>
